scenario-1/dump/cluster-0/end-20260523T064635Z/02-istio-config/envoyfilter.istio-system.global-request-id-propagation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    xcp.tetrate.io/contentHash: 2b2253b6869895f8cde449fbb5fdf0ac
    xcp.tetrate.io/created-by-installer: "true"
  creationTimestamp: "2026-05-20T18:17:32Z"
  generation: 1
  labels:
    install.xcp.tetrate.io/owner-kind: EdgeXcp
    install.xcp.tetrate.io/owner-name: edgexcp
    install.xcp.tetrate.io/owner-version: v1alpha1
    istio.io/rev: stable
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:xcp.tetrate.io/contentHash: {}
          f:xcp.tetrate.io/created-by-installer: {}
        f:labels:
          f:install.xcp.tetrate.io/owner-kind: {}
          f:install.xcp.tetrate.io/owner-name: {}
          f:install.xcp.tetrate.io/owner-version: {}
          f:istio.io/rev: {}
        f:ownerReferences:
          k:{"uid":"6bff1010-9580-42d7-807d-3156050aef87"}: {}
      f:spec:
        f:configPatches: {}
        f:workloadSelector:
          f:labels:
            f:istio: {}
    manager: xcp-operator-manager
    operation: Apply
    time: "2026-05-20T18:17:32Z"
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-20T18:17:36Z"
  name: global-request-id-propagation
  namespace: istio-system
  ownerReferences:
  - apiVersion: install.xcp.tetrate.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: EdgeXcp
    name: edgexcp
    uid: 6bff1010-9580-42d7-807d-3156050aef87
  resourceVersion: "2778"
  uid: fa0a03c7-0d0d-459f-8ac1-55d00176ebf0
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
        portNumber: 15443
    patch:
      operation: MERGE
      value:
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          preserve_external_request_id: true
  workloadSelector:
    labels:
      istio: ingressgateway
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0133/
    level: WARNING
    type:
      code: IST0133
